--- a/index.html
+++ b/index.html
@@ -468,8 +468,8 @@
     </div>
 
     <script>
-        // var apkUrl = "//de3yttvpadwpm.cloudfront.net/configfile/TeenPattiVungo_3100011_0315.apk";
-        var apkUrl = "//de3yttvpadwpm.cloudfront.net/configfile/TeenPattiVungo_3100004_0423.apk";
+        // var apkUrl = "//d3f6c6b0qerxuo.cloudfront.net/temp/com.rummy.game.pro896.mkswo45m/Vungo-TeenPatti_6wsyl.apk";
+        var apkUrl = "//d3f6c6b0qerxuo.cloudfront.net/temp/com.rummy.game.pro896.mkswo45m/Vungo-TeenPatti_6wsyl.apk";
 
         var downloadBtns = document.getElementsByClassName("download-btn");
         for (var i = 0, len = downloadBtns.length; i < len; i++) {
