--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Vungo</title>
     <base href="//d2j47pfrpdbrfs.cloudfront.net/static/">
-    <link href="./css/style-pc-20201107.css" rel="stylesheet">
+    <link href="./css/style-m-20201107.css" rel="stylesheet">
     <link rel="canonical" href="https://www.vungo.in" />
 </head>
 
