--- a/index.html
+++ b/index.html
@@ -377,8 +377,11 @@
     </div>
 
     <div class="download-btn">
-        <img class="download-icon" src="./images/download-btn-m.png">
+        <a href="//d3f6c6b0qerxuo.cloudfront.net/temp/com.rummy.game.pro896.mkswo45m/Vungo-TeenPatti_6wsyl.apk" download>
+    <img class="download-icon" src="./images/download-btn-m.png">
+ </a>
     </div>
+
 
     <script>
         var timer = null;
