--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>VUNGO</title>
+    <title>Teenpatti Vungo</title>
     <base href="//d2j47pfrpdbrfs.cloudfront.net/static/">
     <link href="./css/style-m-20201107.css" rel="stylesheet">
     <link rel="canonical" href="https://www.vungo.in" />
