--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Teenpatti Vungo</title>
+    <title>Teenpatti- India's No.1 Free Card Game</title>
     <base href="//d2j47pfrpdbrfs.cloudfront.net/static/">
     <link href="./css/style-m-20201107.css" rel="stylesheet">
-    <link rel="canonical" href="https://www.vungo.in" />
+    <link rel="canonical" href="https://promotion.teenpattiguide.com" />
     <script>
         document.addEventListener('DOMContentLoaded', function (e) {
             document.getElementsByTagName('html')[0].style.fontSize = document.body.clientWidth / 10 + 'px';
