--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
                         <div class="intro-texts">
                             <p class="intro-text">
-                                Rummy Vungo is the most enjoyable Indian Rummy Card Game which is considered as an extension of Gin Rummy and rami . You can play our online circle rummy live with real & worldwide players in a strong Social Indian Rummy Function. Invite and challenge your Facebook friends to join our rummy free game.
+                                Teenpatti is the most enjoyable Indian Rummy Card Game which is considered as an extension of Gin Rummy and rami . You can play our online circle rummy live with real & worldwide players in a strong Social Indian Rummy Function. Invite and challenge your Facebook friends to join our rummy free game.
                             </p>
                         </div>
                         <div class="intro-icons">
@@ -370,7 +370,7 @@
 
     <div class="footer">
         <div class="footer-text">
-            <p class="footer-text-para">*You must be 18 years or older to play real money rummy</p>
+            <p class="footer-text-para">TeenpattiGuide.com 2021</p>
             <p class="footer-text-para">* This is an indicative amount only and this includes promotional tournaments and bonuses.</pclass="footer-text-para">
             <p class="footer-text-para">Actual amount may differ and would depend on the total number of cash tournaments played on the Website and bonuses claimed by players in a calendar month. Individual winnings depend on your skill and the number of cash tournaments you play in a calendar month.</pclass="footer-text-para">
         </div>
